--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,12 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [
-    ".astro/types.d.ts",
-    "**/*"
-  ],
-  "exclude": [
-    "dist"
-  ],
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
-     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] }
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*"] },
+    "types": ["astro/client", "@astrojs/react/types"]
   }
 }
