début pasge services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,22 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] },
-    "types": ["astro/client", "@astrojs/react/types"]
-  }
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": ["astro/client"]   // 👈 pas de @astrojs/react ici
+  },
+  "include": [
+    "src",
+    "astro.config.*",
+    "env.d.ts",
+    ".astro/types.d.ts"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
