formulaire, faq et début responsive

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     },
     "types": ["astro/client"]   // 👈 pas de @astrojs/react ici
   },
+  "plugins": [{ "name": "@astrojs/ts-plugin" }],
   "include": [
     "src",
     "astro.config.*",
