--- a/package.json
+++ b/package.json
@@ -20,6 +20,21 @@
     "@astrojs/react": "^4.4.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "eslint": "^9.39.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3"
-  }
+  },
+  "description": "```sh npm create astro@latest -- --template basics ```",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Steph-OC/site-pro-steph.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Steph-OC/site-pro-steph/issues"
+  },
+  "homepage": "https://github.com/Steph-OC/site-pro-steph#readme"
 }
