--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.14.5",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
